--- a/acoms-backend/src/main/resources/application.properties
+++ b/acoms-backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/acoms
+spring.datasource.username=postgres
+spring.datasource.password=postdba
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+server.address=0.0.0.0
